<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>me.zzpp.service</groupId>
        <artifactId>dynamic-compiler-jar</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>dynamic-compiler-core</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.tools</groupId>
            <artifactId>tools</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>
</project>